resolved some new Integer's
git-svn-id: https://scm.mmbase.org/mmbase/trunk@20396 91430c5f-d668-0410-9e7d-dd663366dcfd